--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2"
